--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,13 +3,13 @@
           xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
+        android:name=".NotefyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".NotefyMainActivity"
+            android:name=".view.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -18,6 +18,14 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".view.EditActivity"
+                  android:label="Edit"
+                  android:theme="@style/AppTheme.NoActionBar"/>
+
+        <activity android:name=".view.DeletePopupActivity"
+                  android:theme="@style/AppTheme.DeletePopup"
+                  android:excludeFromRecents="true"
+                  android:noHistory="true"/>
     </application>
 
 </manifest>
