--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,33 +8,29 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
-
         <activity
-            android:name=".notes_list.NotesListActivity"
+            android:name=".MainActivity"
             android:label="@string/app_name"
+            android:launchMode="singleTop"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
-            android:name=".new_note.NewNoteActivity"
-            android:label="New Note"
-            android:parentActivityName=".notes_list.NotesListActivity" />
-
+            android:name=".note.NoteActivity"
+            android:parentActivityName=".notes_list.NotesListActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".view.EditActivity"
             android:label="Edit"
             android:theme="@style/AppTheme.NoActionBar" />
-
         <activity
             android:name=".view.DeletePopupActivity"
             android:excludeFromRecents="true"
             android:noHistory="true"
             android:theme="@style/AppTheme.DeletePopup" />
-
     </application>
 
 </manifest>
