--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ buildscript {
 
     repositories {
         jcenter()
+        maven { url 'https://oss.jfrog.org/libs-snapshot' }
     }
 
     dependencies {
@@ -16,7 +17,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 24
+    compileSdkVersion 25
     buildToolsVersion "24.0.3"
 
     defaultConfig {
@@ -40,7 +41,7 @@ android {
 }
 
 ext {
-    supportLibVersion = "25.0.0"
+    supportLibVersion = "25.0.1"
 }
 
 dependencies {
@@ -52,4 +53,7 @@ dependencies {
     compile "com.android.support:cardview-v7:$supportLibVersion"
 
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+
+    compile "io.reactivex.rxjava2:rxjava:2.0.0"
+    compile "io.reactivex.rxjava2:rxandroid:2.0.0"
 }
