--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,6 @@
 buildscript {
-    ext.kotlin_version = '1.0.3'
-
     repositories {
         jcenter()
-        maven { url 'https://oss.jfrog.org/libs-snapshot' }
     }
 
     dependencies {
@@ -18,7 +15,7 @@ apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "24.0.3"
+    buildToolsVersion "25.0.2"
 
     defaultConfig {
         applicationId "org.viktorot.notefy"
@@ -41,18 +38,28 @@ android {
 }
 
 ext {
-    supportLibVersion = "25.0.1"
+    supportLibVersion = "25.1.0"
+    anko_version = "0.9"
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
 
+    debugCompile "com.amitshekhar.android:debug-db:0.4.0"
+
     compile "com.android.support:appcompat-v7:$supportLibVersion"
     compile "com.android.support:design:$supportLibVersion"
     compile "com.android.support:cardview-v7:$supportLibVersion"
+    compile "com.android.support:recyclerview-v7:$supportLibVersion"
 
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+
+    compile "org.jetbrains.anko:anko-sdk23:$anko_version"
+    compile "org.jetbrains.anko:anko-appcompat-v7:$anko_version"
+    compile "org.jetbrains.anko:anko-design:$anko_version"
+    compile "org.jetbrains.anko:anko-recyclerview-v7:$anko_version"
+    compile 'org.jetbrains.anko:anko-sqlite:0.9'
 
     compile "io.reactivex.rxjava2:rxjava:2.0.0"
     compile "io.reactivex.rxjava2:rxandroid:2.0.0"
