--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,21 +46,23 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
 
-    debugCompile "com.amitshekhar.android:debug-db:0.4.0"
-
+    // support lib
     compile "com.android.support:appcompat-v7:$supportLibVersion"
     compile "com.android.support:design:$supportLibVersion"
     compile "com.android.support:cardview-v7:$supportLibVersion"
     compile "com.android.support:recyclerview-v7:$supportLibVersion"
 
+    // kotlin
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
+    // anko
     compile "org.jetbrains.anko:anko-sdk23:$anko_version"
     compile "org.jetbrains.anko:anko-appcompat-v7:$anko_version"
     compile "org.jetbrains.anko:anko-design:$anko_version"
     compile "org.jetbrains.anko:anko-recyclerview-v7:$anko_version"
     compile 'org.jetbrains.anko:anko-sqlite:0.9'
 
+    // rx
     compile "io.reactivex.rxjava2:rxjava:2.0.0"
     compile "io.reactivex.rxjava2:rxandroid:2.0.0"
 }
