--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,3 +66,6 @@ dependencies {
     compile "io.reactivex.rxjava2:rxjava:2.0.0"
     compile "io.reactivex.rxjava2:rxandroid:2.0.0"
 }
+repositories {
+    mavenCentral()
+}
