--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,9 @@ dependencies {
     compile "org.jetbrains.anko:anko-recyclerview-v7:$anko_version"
     compile 'org.jetbrains.anko:anko-sqlite:0.9'
 
+    // conductor
+    compile 'com.bluelinelabs:conductor:2.0.7'
+
     // rx
     compile "io.reactivex.rxjava2:rxjava:2.0.0"
     compile "io.reactivex.rxjava2:rxandroid:2.0.0"
