--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,9 @@ dependencies {
     // rx
     compile "io.reactivex.rxjava2:rxandroid:2.0.1"
     compile "io.reactivex.rxjava2:rxjava:2.0.5"
+
+    // stetho
+    compile 'com.facebook.stetho:stetho:1.4.2'
 }
 repositories {
     mavenCentral()
