--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,6 +74,9 @@ dependencies {
     compile "io.reactivex.rxjava2:rxandroid:2.0.1"
     compile "io.reactivex.rxjava2:rxjava:2.0.5"
 
+    // relay
+    compile 'com.jakewharton.rxrelay2:rxrelay:2.0.0'
+
     // stetho
     compile 'com.facebook.stetho:stetho:1.4.2'
 }
