--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,7 @@ android {
 }
 
 ext {
-    supportLibVersion = "25.3.0"
+    supportLibVersion = "25.3.1"
     anko_version = "0.9"
 }
 
@@ -56,10 +56,6 @@ dependencies {
     // kotlin
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
-    // butterknife
-    compile 'com.jakewharton:butterknife:8.5.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
-
     // anko
     compile "org.jetbrains.anko:anko-sdk23:$anko_version"
     compile "org.jetbrains.anko:anko-appcompat-v7:$anko_version"
@@ -68,7 +64,7 @@ dependencies {
     compile 'org.jetbrains.anko:anko-sqlite:0.9'
 
     // conductor
-    compile 'com.bluelinelabs:conductor:2.0.7'
+    compile 'com.bluelinelabs:conductor:2.1.1'
 
     // rx
     compile "io.reactivex.rxjava2:rxandroid:2.0.1"
@@ -79,6 +75,9 @@ dependencies {
 
     // stetho
     compile 'com.facebook.stetho:stetho:1.4.2'
+
+    // timber
+    compile 'com.jakewharton.timber:timber:4.5.1'
 }
 repositories {
     mavenCentral()
